[main-private] minor update