@@ -22,6 +22,7 @@ package eu.essi_lab.harvester.worker;
  */
 
 import java.sql.SQLException;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
@@ -55,11 +56,13 @@ import eu.essi_lab.harvester.component.AugmenterComponent;
 import eu.essi_lab.harvester.component.DatabaseComponent;
 import eu.essi_lab.harvester.component.IdentifierDecoratorComponent;
 import eu.essi_lab.harvester.component.IndexedElementsWriterComponent;
+import eu.essi_lab.harvester.component.ResourceComparatorComponent;
 import eu.essi_lab.harvester.component.ResourceValidatorComponent;
 import eu.essi_lab.identifierdecorator.IdentifierDecorator;
 import eu.essi_lab.lib.utils.GSLoggerFactory;
 import eu.essi_lab.model.StorageInfo;
 import eu.essi_lab.model.exceptions.GSException;
+import eu.essi_lab.model.resource.MetadataElement;
 
 /**
  * @author Fabrizio
@@ -252,8 +255,6 @@ public class HarvesterWorker extends SchedulerWorker<HarvestingSetting> {
 	// 1) IndentifierDecoratorComponent
 	//
 
-
-
 	IdentifierDecorator identifierDecorator = new IdentifierDecorator(//
 		ConfigurationWrapper.getSourcePrioritySetting(), //
 		dataBaseReader);
@@ -324,7 +325,7 @@ public class HarvesterWorker extends SchedulerWorker<HarvestingSetting> {
 	    @SuppressWarnings("unchecked")
 	    Class<CustomTask> taskClass = (Class<CustomTask>) Class.forName(taskClassName);
 
-	    CustomTask customTask = taskClass.newInstance();
+	    CustomTask customTask = taskClass.getDeclaredConstructor().newInstance();
 
 	    harvester.setCustomTask(customTask);
 
